# WallpaperTool

./: README.md  main.py  mian.py  test.py
WallpaperTool_rust/: Cargo.toml  build.rs  icon.rc
WallpaperTool_rust/src/: main.rs
