[package]
name = "WallpaperTool"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.27"
image = { version = "0.24", features = ["ico", "png","rayon"] }
imageproc = "0.23"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
wmi = "0.13"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi"
] }

[build-dependencies]
embed-resource = "2.5"