[package]
name = "WallpaperTool"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.27"
image = { version = "0.24", features = ["ico", "png","rayon"] }
imageproc = "0.23"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
wmi = "0.13"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi"
] }

[build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = "z"      # 优先优化体积，而不是速度 (默认为 3 优化速度)
lto = true           # 启用链接时优化 (Link Time Optimization)，大幅去除死代码
codegen-units = 1    # 允许更激进的优化，但编译变慢
panic = "abort"      # 遇到 panic 直接终止，不展开堆栈信息 (节省大量空间)
strip = true         # 自动剥离调试符号 (Rust 1.59+ 支持)